--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
 
-<title>Facebook Message Manager</title>
+<title>Boiler plate</title>
 
 </head>
 
@@ -15,10 +15,9 @@
 
 
 </div>
-{% raw %}
 
 
-
+<h1>Index page</h1>
 <br>
 <ng-view></ng-view>
 
@@ -27,8 +26,6 @@
 <script src="app.js"></script>
 <script src="modules/dbConsole/dbconsole.client.controller.js"></script>
 
-
-{% endraw %}
 </body>
 
 </html>
