--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body ng-controller="MainController">
+<body>
 
 <div class="col-md-12" style="background-color: #006699">
 
@@ -24,7 +24,7 @@
 <script src="js/angular.min.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="app.js"></script>
-<script src="modules/dbConsole/dbconsole.client.controller.js"></script>
+<script src="modules/main/main-controller.js"></script>
 
 </body>
 
